<resources>
    <string name="app_name">My Wedding Invitation</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="tab_text_1">Groom</string>
    <string name="tab_text_2">Bride</string>
    <string name="tab_text_3">Invitation</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="groom_name">Suraj Bahadur</string>
    <string name="groom_parent">Smt.&amp;Sri Shanta &amp; Hari Bahadur</string>
    <string name="bride_name">Bhawna Shau</string>
    <string name="bride_parent">Smt.&amp;Sri Mona &amp; Hari Prasad</string>
    <string name="menu_venue">Marriage Venue</string>
    <string name="menu_direction">Direction</string>
    <string name="menu_contacts">Contacts</string>
    <string name="menu_share">Share</string>
    <string name="header_txt">Suraj 💗 Bhawna</string>
    <string name="wedding_invitation">Wedding Invitation</string>
    <string name="venue_location">Youth Hostel, Sector 3, Panchkula (Haryana)</string>
    <string name="click_to_navigation_location">Click to Navigate Location</string>
    <string name="action_like">Like</string>
</resources>